added about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,9 +8,11 @@
     
   </head>
   <body>
+    
     <div class="main-content">
  {{>headers}}
     <img class="portrait" src="/img/me.jpg" />
+    <p>This website is created by Mandeep Saini.This website uses data from mapbox.com and darksky.net</p>
     </div>
    
    
